--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -30,9 +30,23 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <section id="nineAM" hour="9">
+        <p>9am</p>
+        <textarea class="notes"></textarea>
+        <button class="save">Save</button>
+        
+      </section>
+
+      <section id="tenAM" hour="10">
+        <p>10am</p>
+        <textarea class="notes"></textarea>
+        <button class="save">Save</button>
+        
+      </section>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
